// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditRecord ChildIdentifiers matches snapshot - no unique id 1`] = `
<DocumentFragment>
  <form
    autocomplete="off"
    class="usa-form ChildIdentifiersForm usa-form"
    novalidate=""
  >
    <h2>
      Child's identifiers
    </h2>
    <div
      class="mobile-lg:grid-col-9"
    >
      <div
        class=" usa-form-group"
      >
        <label
          class="usa-label"
          for="firstName"
        >
          First name 
        </label>
        <input
          aria-required="true"
          class="usa-input oec-text-input"
          id="firstName"
          type="text"
          value="First"
        />
      </div>
    </div>
    <div
      class="mobile-lg:grid-col-9"
    >
      <div
        class=" usa-form-group"
      >
        <label
          class="usa-label"
          for="middleName"
        >
          Middle name 
          <span
            class="usa-hint"
          >
             (optional)
          </span>
        </label>
        <input
          aria-required="false"
          class="usa-input oec-text-input"
          id="middleName"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="display-flex flex-row flex-align-end grid-row grid-gap"
    >
      <div
        class="mobile-lg:grid-col-9"
      >
        <div
          class=" usa-form-group"
        >
          <label
            class="usa-label"
            for="lastName"
          >
            Last name 
          </label>
          <input
            aria-required="true"
            class="usa-input oec-text-input"
            id="lastName"
            type="text"
            value="Last"
          />
        </div>
      </div>
      <div
        class="mobile-lg:grid-col-3"
      >
        <div
          class=" usa-form-group"
        >
          <label
            class="usa-label"
            for="suffix"
          >
            Suffix 
            <span
              class="usa-hint"
            >
               (optional)
            </span>
          </label>
          <input
            aria-required="false"
            class="usa-input oec-text-input"
            id="suffix"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <fieldset
      aria-labelledby="fieldset-legend-dateOfBirth-picker dateOfBirth-picker-hint"
      class="usa-fieldset"
      id="dateOfBirth-picker"
    >
      <legend
        id="fieldset-legend-dateOfBirth-picker"
      >
        <span
          class="usa-label"
        >
          Birthdate
        </span>
      </legend>
      <span
        class="usa-hint text-italic"
        id="dateOfBirth-picker-hint"
      >
        For example: 6 21 2008
      </span>
      <div>
        <div
          class="flex-row flex-align-end usa-memorable-date"
        >
          <div
            class="oec-date-input__input margin-right-1 margin-top-0 usa-form-group"
          >
            <label
              class="usa-label"
              for="dateOfBirth-picker-month"
            >
              Month 
            </label>
            <input
              aria-required="true"
              class="usa-input oec-text-input usa-input--inline"
              id="dateOfBirth-picker-month"
              max="12"
              min="1"
              type="number"
              value=""
            />
          </div>
          <div
            class="oec-date-input__input margin-right-1 margin-top-0 usa-form-group"
          >
            <label
              class="usa-label"
              for="dateOfBirth-picker-day"
            >
              Day 
            </label>
            <input
              aria-required="true"
              class="usa-input oec-text-input usa-input--inline"
              id="dateOfBirth-picker-day"
              max="31"
              min="1"
              type="number"
              value=""
            />
          </div>
          <div
            class="oec-date-input__input margin-right-1 margin-top-0 usa-form-group"
          >
            <label
              class="usa-label"
              for="dateOfBirth-picker-year"
            >
              Year 
            </label>
            <input
              aria-required="true"
              class="usa-input oec-text-input usa-input--inline"
              id="dateOfBirth-picker-year"
              max="2200"
              min="1000"
              type="number"
              value=""
            />
          </div>
        </div>
      </div>
    </fieldset>
    <fieldset
      aria-labelledby="fieldset-legend-birth-certificate-fields"
      class="usa-fieldset"
      id="birth-certificate-fields"
    >
      <legend
        id="fieldset-legend-birth-certificate-fields"
      >
        <span
          class="usa-label"
        >
          Birth certificate
        </span>
      </legend>
      <div>
        <span>
          <div
            class="usa-radio"
          >
            <input
              class="usa-radio__input"
              id="US-birth-certificate"
              name="birthCertificateType"
              type="radio"
              value="US birth certificate"
            />
            <label
              class="usa-radio__label"
              for="US-birth-certificate"
            >
              US birth certificate
            </label>
          </div>
        </span>
        <span>
          <div
            class="usa-radio"
          >
            <input
              class="usa-radio__input"
              id="Non-US-birth-certificate"
              name="birthCertificateType"
              type="radio"
              value="Non-US birth certificate"
            />
            <label
              class="usa-radio__label"
              for="Non-US-birth-certificate"
            >
              Non-US birth certificate
            </label>
          </div>
        </span>
        <span>
          <div
            class="usa-radio"
          >
            <input
              class="usa-radio__input"
              id="Unavailable"
              name="birthCertificateType"
              type="radio"
              value="Unavailable"
            />
            <label
              class="usa-radio__label"
              for="Unavailable"
            >
              Unavailable
            </label>
          </div>
        </span>
      </div>
    </fieldset>
    <input
      class="usa-button"
      type="submit"
      value="Save"
    />
  </form>
</DocumentFragment>
`;

exports[`EditRecord ChildIdentifiers matches snapshot - other unique id 1`] = `
<DocumentFragment>
  <form
    autocomplete="off"
    class="usa-form ChildIdentifiersForm usa-form"
    novalidate=""
  >
    <h2>
      Child's identifiers
    </h2>
    <div
      class="mobile-lg:grid-col-12"
    >
      <div
        class=" usa-form-group"
      >
        <label
          class="usa-label"
          for="unique-id"
        >
          Unique Id 
          <span
            class="usa-hint"
          >
             (optional)
          </span>
        </label>
        <input
          aria-required="false"
          class="usa-input oec-text-input"
          id="unique-id"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="mobile-lg:grid-col-9"
    >
      <div
        class=" usa-form-group"
      >
        <label
          class="usa-label"
          for="firstName"
        >
          First name 
        </label>
        <input
          aria-required="true"
          class="usa-input oec-text-input"
          id="firstName"
          type="text"
          value="First"
        />
      </div>
    </div>
    <div
      class="mobile-lg:grid-col-9"
    >
      <div
        class=" usa-form-group"
      >
        <label
          class="usa-label"
          for="middleName"
        >
          Middle name 
          <span
            class="usa-hint"
          >
             (optional)
          </span>
        </label>
        <input
          aria-required="false"
          class="usa-input oec-text-input"
          id="middleName"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="display-flex flex-row flex-align-end grid-row grid-gap"
    >
      <div
        class="mobile-lg:grid-col-9"
      >
        <div
          class=" usa-form-group"
        >
          <label
            class="usa-label"
            for="lastName"
          >
            Last name 
          </label>
          <input
            aria-required="true"
            class="usa-input oec-text-input"
            id="lastName"
            type="text"
            value="Last"
          />
        </div>
      </div>
      <div
        class="mobile-lg:grid-col-3"
      >
        <div
          class=" usa-form-group"
        >
          <label
            class="usa-label"
            for="suffix"
          >
            Suffix 
            <span
              class="usa-hint"
            >
               (optional)
            </span>
          </label>
          <input
            aria-required="false"
            class="usa-input oec-text-input"
            id="suffix"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <fieldset
      aria-labelledby="fieldset-legend-dateOfBirth-picker dateOfBirth-picker-hint"
      class="usa-fieldset"
      id="dateOfBirth-picker"
    >
      <legend
        id="fieldset-legend-dateOfBirth-picker"
      >
        <span
          class="usa-label"
        >
          Birthdate
        </span>
      </legend>
      <span
        class="usa-hint text-italic"
        id="dateOfBirth-picker-hint"
      >
        For example: 6 21 2008
      </span>
      <div>
        <div
          class="flex-row flex-align-end usa-memorable-date"
        >
          <div
            class="oec-date-input__input margin-right-1 margin-top-0 usa-form-group"
          >
            <label
              class="usa-label"
              for="dateOfBirth-picker-month"
            >
              Month 
            </label>
            <input
              aria-required="true"
              class="usa-input oec-text-input usa-input--inline"
              id="dateOfBirth-picker-month"
              max="12"
              min="1"
              type="number"
              value=""
            />
          </div>
          <div
            class="oec-date-input__input margin-right-1 margin-top-0 usa-form-group"
          >
            <label
              class="usa-label"
              for="dateOfBirth-picker-day"
            >
              Day 
            </label>
            <input
              aria-required="true"
              class="usa-input oec-text-input usa-input--inline"
              id="dateOfBirth-picker-day"
              max="31"
              min="1"
              type="number"
              value=""
            />
          </div>
          <div
            class="oec-date-input__input margin-right-1 margin-top-0 usa-form-group"
          >
            <label
              class="usa-label"
              for="dateOfBirth-picker-year"
            >
              Year 
            </label>
            <input
              aria-required="true"
              class="usa-input oec-text-input usa-input--inline"
              id="dateOfBirth-picker-year"
              max="2200"
              min="1000"
              type="number"
              value=""
            />
          </div>
        </div>
      </div>
    </fieldset>
    <fieldset
      aria-labelledby="fieldset-legend-birth-certificate-fields"
      class="usa-fieldset"
      id="birth-certificate-fields"
    >
      <legend
        id="fieldset-legend-birth-certificate-fields"
      >
        <span
          class="usa-label"
        >
          Birth certificate
        </span>
      </legend>
      <div>
        <span>
          <div
            class="usa-radio"
          >
            <input
              class="usa-radio__input"
              id="US-birth-certificate"
              name="birthCertificateType"
              type="radio"
              value="US birth certificate"
            />
            <label
              class="usa-radio__label"
              for="US-birth-certificate"
            >
              US birth certificate
            </label>
          </div>
        </span>
        <span>
          <div
            class="usa-radio"
          >
            <input
              class="usa-radio__input"
              id="Non-US-birth-certificate"
              name="birthCertificateType"
              type="radio"
              value="Non-US birth certificate"
            />
            <label
              class="usa-radio__label"
              for="Non-US-birth-certificate"
            >
              Non-US birth certificate
            </label>
          </div>
        </span>
        <span>
          <div
            class="usa-radio"
          >
            <input
              class="usa-radio__input"
              id="Unavailable"
              name="birthCertificateType"
              type="radio"
              value="Unavailable"
            />
            <label
              class="usa-radio__label"
              for="Unavailable"
            >
              Unavailable
            </label>
          </div>
        </span>
      </div>
    </fieldset>
    <input
      class="usa-button"
      type="submit"
      value="Save"
    />
  </form>
</DocumentFragment>
`;

exports[`EditRecord ChildIdentifiers matches snapshot - sasid 1`] = `
<DocumentFragment>
  <form
    autocomplete="off"
    class="usa-form ChildIdentifiersForm usa-form"
    novalidate=""
  >
    <h2>
      Child's identifiers
    </h2>
    <div
      class="mobile-lg:grid-col-12"
    >
      <div
        class=" usa-form-group"
      >
        <label
          class="usa-label"
          for="sasid"
        >
          SASID 
          <span
            class="usa-hint"
          >
             (optional)
          </span>
        </label>
        <input
          aria-required="false"
          class="usa-input oec-text-input"
          id="sasid"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="mobile-lg:grid-col-9"
    >
      <div
        class=" usa-form-group"
      >
        <label
          class="usa-label"
          for="firstName"
        >
          First name 
        </label>
        <input
          aria-required="true"
          class="usa-input oec-text-input"
          id="firstName"
          type="text"
          value="First"
        />
      </div>
    </div>
    <div
      class="mobile-lg:grid-col-9"
    >
      <div
        class=" usa-form-group"
      >
        <label
          class="usa-label"
          for="middleName"
        >
          Middle name 
          <span
            class="usa-hint"
          >
             (optional)
          </span>
        </label>
        <input
          aria-required="false"
          class="usa-input oec-text-input"
          id="middleName"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="display-flex flex-row flex-align-end grid-row grid-gap"
    >
      <div
        class="mobile-lg:grid-col-9"
      >
        <div
          class=" usa-form-group"
        >
          <label
            class="usa-label"
            for="lastName"
          >
            Last name 
          </label>
          <input
            aria-required="true"
            class="usa-input oec-text-input"
            id="lastName"
            type="text"
            value="Last"
          />
        </div>
      </div>
      <div
        class="mobile-lg:grid-col-3"
      >
        <div
          class=" usa-form-group"
        >
          <label
            class="usa-label"
            for="suffix"
          >
            Suffix 
            <span
              class="usa-hint"
            >
               (optional)
            </span>
          </label>
          <input
            aria-required="false"
            class="usa-input oec-text-input"
            id="suffix"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <fieldset
      aria-labelledby="fieldset-legend-dateOfBirth-picker dateOfBirth-picker-hint"
      class="usa-fieldset"
      id="dateOfBirth-picker"
    >
      <legend
        id="fieldset-legend-dateOfBirth-picker"
      >
        <span
          class="usa-label"
        >
          Birthdate
        </span>
      </legend>
      <span
        class="usa-hint text-italic"
        id="dateOfBirth-picker-hint"
      >
        For example: 6 21 2008
      </span>
      <div>
        <div
          class="flex-row flex-align-end usa-memorable-date"
        >
          <div
            class="oec-date-input__input margin-right-1 margin-top-0 usa-form-group"
          >
            <label
              class="usa-label"
              for="dateOfBirth-picker-month"
            >
              Month 
            </label>
            <input
              aria-required="true"
              class="usa-input oec-text-input usa-input--inline"
              id="dateOfBirth-picker-month"
              max="12"
              min="1"
              type="number"
              value=""
            />
          </div>
          <div
            class="oec-date-input__input margin-right-1 margin-top-0 usa-form-group"
          >
            <label
              class="usa-label"
              for="dateOfBirth-picker-day"
            >
              Day 
            </label>
            <input
              aria-required="true"
              class="usa-input oec-text-input usa-input--inline"
              id="dateOfBirth-picker-day"
              max="31"
              min="1"
              type="number"
              value=""
            />
          </div>
          <div
            class="oec-date-input__input margin-right-1 margin-top-0 usa-form-group"
          >
            <label
              class="usa-label"
              for="dateOfBirth-picker-year"
            >
              Year 
            </label>
            <input
              aria-required="true"
              class="usa-input oec-text-input usa-input--inline"
              id="dateOfBirth-picker-year"
              max="2200"
              min="1000"
              type="number"
              value=""
            />
          </div>
        </div>
      </div>
    </fieldset>
    <fieldset
      aria-labelledby="fieldset-legend-birth-certificate-fields"
      class="usa-fieldset"
      id="birth-certificate-fields"
    >
      <legend
        id="fieldset-legend-birth-certificate-fields"
      >
        <span
          class="usa-label"
        >
          Birth certificate
        </span>
      </legend>
      <div>
        <span>
          <div
            class="usa-radio"
          >
            <input
              class="usa-radio__input"
              id="US-birth-certificate"
              name="birthCertificateType"
              type="radio"
              value="US birth certificate"
            />
            <label
              class="usa-radio__label"
              for="US-birth-certificate"
            >
              US birth certificate
            </label>
          </div>
        </span>
        <span>
          <div
            class="usa-radio"
          >
            <input
              class="usa-radio__input"
              id="Non-US-birth-certificate"
              name="birthCertificateType"
              type="radio"
              value="Non-US birth certificate"
            />
            <label
              class="usa-radio__label"
              for="Non-US-birth-certificate"
            >
              Non-US birth certificate
            </label>
          </div>
        </span>
        <span>
          <div
            class="usa-radio"
          >
            <input
              class="usa-radio__input"
              id="Unavailable"
              name="birthCertificateType"
              type="radio"
              value="Unavailable"
            />
            <label
              class="usa-radio__label"
              for="Unavailable"
            >
              Unavailable
            </label>
          </div>
        </span>
      </div>
    </fieldset>
    <input
      class="usa-button"
      type="submit"
      value="Save"
    />
  </form>
</DocumentFragment>
`;
